font family declarations

--- a/source/view/index.scss
+++ b/source/view/index.scss
@@ -1,2 +1,5 @@
 // view : index (styles) - =================================================================================== - //
 @charset 'utf-8';
+
+// core //
+@use '@/core/font-family';
